homelab/homer/homer-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homer
  namespace: homelab
  labels:
    app.kubernetes.io/instance: homer
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: homer
    app.kubernetes.io/version: 22.11.1
    helm.sh/chart: homer-0.1.10
status:
  loadBalancer:
    ingress:
      - ip: 192.168.1.150
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - homer.mcmumf.dev
      secretName: homer-tls
  rules:
    - host: homer.mcmumf.dev
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: homer
                port:
                  number: 8080
